Получение всех задач и по id